Definição dos métodos da camada Service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Configurações do PostgreSQL
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/escola_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/editora
 spring.datasource.username=postgres
 spring.datasource.password=Mpon0908@
 spring.datasource.driver-class-name=org.postgresql.Driver
